<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/credit_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/history_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/credit_text"
        app:layout_constraintTop_toBottomOf="@+id/credit_text" />

    <TextView
        android:id="@+id/history_example_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/history_example_1_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/history_text"
        app:layout_constraintTop_toBottomOf="@+id/history_text" />

    <TextView
        android:id="@+id/preferences_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/preferences_text_value"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/history_example_1"
        app:layout_constraintTop_toBottomOf="@+id/history_example_1" />

    <TextView
        android:id="@+id/minimum_battery_percent_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/min_bat_percent_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/preferences_text"
        app:layout_constraintTop_toBottomOf="@+id/preferences_text" />

    <TextView
        android:id="@+id/dark_mode_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dark_mode_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/minimum_battery_percent_option"
        app:layout_constraintTop_toBottomOf="@+id/minimum_battery_percent_option" />

    <TextView
        android:id="@+id/manual_idle_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/manual_idle_time_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dark_mode_textview"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_textview" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/font_size_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/manual_idle_time"
        app:layout_constraintTop_toBottomOf="@+id/manual_idle_time" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/sign_out_text_value"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <EditText
        android:id="@+id/bat_percent_input"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="40%"
        app:layout_constraintStart_toEndOf="@+id/minimum_battery_percent_option"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/toggle_light_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/bat_percent_input"
        app:layout_constraintTop_toBottomOf="@+id/bat_percent_input" />

</androidx.constraintlayout.widget.ConstraintLayout>