<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/rq_button"
            android:layout_width="248dp"
            android:layout_height="86dp"
            android:layout_marginTop="520dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/rq_button_text"
            android:textColor="@color/design_default_color_background"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/from_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/from_text"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/to_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/to_text"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/from_textView"
            app:layout_constraintTop_toBottomOf="@+id/from_textView" />

        <TextView
            android:id="@+id/in_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/in_text"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/to_textView"
            app:layout_constraintTop_toBottomOf="@+id/to_textView" />

        <EditText
            android:id="@+id/from_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:ems="10"
            android:hint="@string/from_hint_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/from_textView" />

        <EditText
            android:id="@+id/to_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/to_hint_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/from_textbox"
            app:layout_constraintTop_toTopOf="@+id/to_textView" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            app:layout_constraintBottom_toTopOf="@+id/rq_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>