<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/rq_button"
        android:layout_width="248dp"
        android:layout_height="86dp"
        android:layout_marginTop="592dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/rq_button_text"
        android:textColor="@color/design_default_color_background"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/from_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/from_hint_text_current"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/from_textView" />

    <TextView
        android:id="@+id/from_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/from_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/to_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/from_textView"
        app:layout_constraintTop_toBottomOf="@+id/from_textView" />

    <EditText
        android:id="@+id/to_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/to_hint_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/from_textbox"
        app:layout_constraintTop_toTopOf="@+id/to_textView" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="397dp"
        android:layout_height="314dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/rq_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>